corrections to the title and subtitle

--- a/_posts/2018-09-26-riplrt-ai.md
+++ b/_posts/2018-09-26-riplrt-ai.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Artificial Intelligence (AI) in RIPLRT
-subtitle: Predictor the next word with AI
+title: Artificial Intelligence (AI) in the RIPLRT
+subtitle: Predicting the next word you are going to type!
 --- 
 
 Did you know that the Big Data analysis of the RIPLRT also involves artificial intelligence approaches? Our principal investigator (Dr. Rivera-Mariani) has knowledge in implementing big data analytics to make predictions, such as attempting to predict the next word you are going to type (see below the app).
