updated to Shandra's post

--- a/_posts/2019-05-17-mentors.md
+++ b/_posts/2019-05-17-mentors.md
@@ -30,7 +30,7 @@ As you can see, you can have a mentor for multiple aspects of your life. Once yo
 I hope these tips urge you to pursue seeking out a mentor(s) of your own if you do not already have one, and help you maintain a great relationship!
 
 <img src="/img/Shandra.jpeg" alt="Shandra Bellinger" align="left" style="width: 15%; height: 15%; margin:8px">
-<p><i>About the author -- Shandra Bellinger is a recent graduate of the M.S. in Biomedical Sciences at Larkin University College of Biomedical Sciences. Shandra is also an Research Assistant-Intern in the RIPL_Effect Research Team under the mentorship of principal investigator, Dr. Félix E. Rivera-Mariani. Shandra, original from Maryland, has among her main goals to be a physician in the near future. Learn more about Shandra <a href="https://www.riplrt.com/members/#Shandra%20Bellinger">here. </a> </i></p>
+<p><i>About the author -- Shandra Bellinger is a recent graduate of the M.S. in Biomedical Sciences at Larkin University College of Biomedical Sciences. Shandra is also an Research Assistant-Intern in the RIPL_Effect Research Team under the mentorship of principal investigator, Dr. Félix E. Rivera-Mariani. Shandra, original from Maryland, has among her main goals to be a physician in the near future. Shandra is also a "master" at editing documents! Learn more about Shandra <a href="https://www.riplrt.com/members/#Shandra%20Bellinger">here. </a> </i></p>
 
 References: 
 
