added ordered list

--- a/_posts/2019-05-17-mentors.md
+++ b/_posts/2019-05-17-mentors.md
@@ -8,11 +8,14 @@ subtitle: Types of Mentors and how to cultivate a great relationship
 
 As you read in Ruslan’s post “Mentors-the unsung heroes,” the benefits of having a mentor are limitless. They’re able to exposure you to new opportunities, help you network, hold you accountable, support you and be your cheerleader, and act as your advisor. According to Anthony Tjan, there are <a href="https://ideas.ted.com/the-5-types-of-mentors-you-need-in-your-life/" target="_blank"> five types of mentors</a>: 
 
-1) The master of craft- someone who is in the role you inspire to be in
-2) The champion of your cause- someone who acts as your advocate and “talks you up to others” and supports career specific goals
-3) The copilot- your work buddy and peer
-4) The anchor- a friend or family member who has your overall best interest in mind 
-5) The reverse mentor- your mentee, who can help you evaluate your leadership style and stay relevant with the current times.
+<ol>
+	<li>The master of craft- someone who is in the role you inspire to be in</li>
+	<li>The champion of your cause- someone who acts as your advocate and “talks you up to others” and supports career specific goals</li>
+	<li>The copilot- your work buddy and peer</li>
+	<li>The anchor- a friend or family member who has your overall best interest in mind </li>
+	<li>The reverse mentor- your mentee, who can help you evaluate your leadership style and stay relevant with the current times.</li>
+</ol>
+
 
 <img src="/img/mentors_sb.png" alt="Types of Mentors" class="inline"/>
 
