updated mold post
Updated the descriptions of Lorraine, and added a brief legend to the images

--- a/_posts/2019-07-01-indoor-mold-101.md
+++ b/_posts/2019-07-01-indoor-mold-101.md
@@ -12,15 +12,15 @@ Molds gain enter to your home through air (open doors or windows, ventilation sy
 
 <img src="/img/indoor-mold.png" alt="Indoor Mold" class="inline"/>
 
+<i>Left image: example of indoor mold contamination; right image: microscopic representation of the genus <i>Aspergillus</i>, which is among the freguent fungi contaminating indoor environments</i>. 
+
 Exposure to mold doesn’t cause problems in most people. However, some persons are sensitive to molds, meaning their immune system overreacts to them developing an allergy response. Sensitive people to mold can have nasal congestion, itchy eyes and sneezing symptoms after exposure to molds. Also, asthmatic persons may be susceptible to these organisms and have asthma symptoms exacerbations. Moreover, persons with weakened immune systems are at risk of developing mold infections.  
 It’s important to know that mold can never be truly eliminated from the indoor environment. What we can do is reduce the levels of indoor mold growth by controlling moisture. Indoor humidity must be within 30-60% in order to decrease and prevent indoor mold growth. The use of air conditioners or de-humidifiers are helpful for the control of humidity levels. Increasing the ventilation in moisture-prone areas, such as the bathroom and kitchen, will also prevent indoor mold. Its very important to fix sources of water problems (leaks) and to clean and replace moldy materials after an episode of flooding. Also, if you are sensitive to molds, the use of an air purifier will decrease your exposure to mold spores which will eventually prevent allergy symptoms. I hope you learned key points about indoor mold and tips on how to prevent them. Stay updated with our blog for more interesting topics!
 
 <img src="/img/Lorraine.jpeg" alt="Lorraine N. Vélez-Torres" align="left" style="width: 15%; height: 15%; margin:8px">
-<p><i>About the author -- Lorraine Vélez-Torres is a third-year Ph.D. candidate in the Department of Microbiology and Medical Zoology at the University of Puerto Rico, Medical Sciences Campus. She earned her master’s degree in Public Health with concentration in Epidemiology in 2015, identifying the risk factors affecting the quality of life of residents in Yabucoa, Puerto Rico. In 2014 she received a double major in Industrial Microbiology and Biology at the University of Puerto Rico, Mayagüez Campus. During her undergraduate education, she worked in the Symbiosis Laboratory of Dr. Cafaro investigating the antifungal capacity of Actinobacteria associated to the exoskeleton of the termite Nasutitermes costalis. She’s currently working in her research thesis at the Mycology Laboratory of Dr. Bolaños, studying the effect of Hurricane María in the indoor concentration of fungi and the health outcomes of the habitants.</i></p>.
+<p><i>About the author -- Lorraine Vélez-Torres is a third-year Ph.D. candidate in the Department of Microbiology and Medical Zoology at the University of Puerto Rico, Medical Sciences Campus. She earned her master’s degree in Public Health with concentration in Epidemiology in 2015, identifying the risk factors affecting the quality of life of residents in Yabucoa, Puerto Rico. In 2014 she received a double major in Industrial Microbiology and Biology at the University of Puerto Rico, Mayagüez Campus. She’s currently working in her research thesis at the Mycology Laboratory of Dr. Bolaños, studying the effect of Hurricane María in the indoor concentration of fungi and the health outcomes of the habitants. Because Dr. Rivera-Mariani is a member of the thesis committee of Lorraine, she was invited for and completed a one-week training with the RIPLRT to learn the different human-based immunological approaches we implement in environmental health studies.</i></p>.
 
-<div style="text-align:justify"><p> Because Dr. Rivera-Mariani is a member of the thesis committee of Lorraine, she was invited for and completed a one-week training with the RIPLRT to learn the different human-based immunological approaches we implement in environmental health studies. Also, she trained on the experimental planning and design, project management and execution, as well as data management and analysis we implement when deploying human-based immunological approaches to study the respiratory health risks resulting from human exposures to air pollution. Lorraine will be implementing in her thesis studies the skill sets she will learned with the RIPLRT.</p></div> 
-
-<a href="https://www.riplrt.com/cv/CV_Lorraine_Redacted.pdf" target="_blank">Click here</a> to view Lorraine's C.V.
+<a href="https://www.riplrt.com/cv/CV_Lorraine_Redacted.pdf" target="_blank">Click here</a> to learn more about Lorraine, and <a href="https://www.riplrt.com/cv/CV_Lorraine_Redacted.pdf" target="_blank">here</a> to view Lorraine's credentials.
 
 
 <b>References:</b>
