--- a/_posts/2019-07-01-indoor-mold-101.md
+++ b/_posts/2019-07-01-indoor-mold-101.md
@@ -8,13 +8,14 @@ subtitle: How to Prevent and Control Mold Growth in your Home
 
 Mold is a type of fungi that can be found almost everywhere. Their role in the environment is to decompose organic material such as animal and plant matter. Molds reproduce through microscopic units known as spores. Spores travel through the air and are resistant to dry environments. Molds can be found outdoor in the soil, water, plants and animals but can also be found in the interior of people’s homes. 
 
-Molds gain enter to your home through air (open doors or windows, ventilation systems) or by attaching to your clothing, shoes or pets. Mold will grow indoors only if the spores have the necessary conditions to do so. Favorable conditions for indoor mold growth include high humidity levels, lack of air ventilation and the presence of organic food source materials. Bathrooms, basements, walls, ceilings, carpets, books, clothes and fruits are places and surfaces where mold is often found. This is because of the high humidity levels present in these places or where these objects are stored. Also, the material of the walls, ceilings, books, clothes and fruits provide food to the mold.  Additionally, studies show that homes that sustained water-damage or flooding have higher quantities of indoor molds. Some of the common indoor molds are: Aspergillus, Cladosporium, Penicillium and Alternaria. 
+Molds gain enter to your home through air (open doors or windows, ventilation systems) or by attaching to your clothing, shoes or pets. Mold will grow indoors only if the spores have the necessary conditions to do so. Favorable conditions for indoor mold growth include high humidity levels, lack of air ventilation and the presence of organic food source materials. Bathrooms, basements, walls, ceilings, carpets, books, clothes and fruits are places and surfaces where mold is often found. This is because of the high humidity levels present in these places or where these objects are stored. Also, the material of the walls, ceilings, books, clothes and fruits provide food to the mold.  Additionally, studies show that homes that sustained water-damage or flooding have higher quantities of indoor molds. Some of the common indoor molds are: <i>Aspergillus</i>, <i>Cladosporium</i>, <i>Penicillium</i> and <i>Alternaria</i>. 
 
 <img src="/img/indoor-mold.png" alt="Indoor Mold" class="inline"/>
 
-<i>Left image: example of indoor mold contamination; right image: microscopic representation of the genus <i>Aspergillus</i>, which is among the freguent fungi contaminating indoor environments</i>. 
+<i>Left image: example of indoor mold contamination; right image: microscopic representation of the genus Aspergillus, which is among the freguent fungi contaminating indoor environments</i>. 
 
-Exposure to mold doesn’t cause problems in most people. However, some persons are sensitive to molds, meaning their immune system overreacts to them developing an allergy response. Sensitive people to mold can have nasal congestion, itchy eyes and sneezing symptoms after exposure to molds. Also, asthmatic persons may be susceptible to these organisms and have asthma symptoms exacerbations. Moreover, persons with weakened immune systems are at risk of developing mold infections.  
+Exposure to mold doesn’t cause problems in most people. However, some persons are sensitive to molds, meaning their immune system overreacts to them developing an allergy response. Sensitive people to mold can have nasal congestion, itchy eyes and sneezing symptoms after exposure to molds. Also, asthmatic persons may be susceptible to these organisms and have asthma symptoms exacerbations. Moreover, persons with weakened immune systems are at risk of developing mold infections. 
+ 
 It’s important to know that mold can never be truly eliminated from the indoor environment. What we can do is reduce the levels of indoor mold growth by controlling moisture. Indoor humidity must be within 30-60% in order to decrease and prevent indoor mold growth. The use of air conditioners or de-humidifiers are helpful for the control of humidity levels. Increasing the ventilation in moisture-prone areas, such as the bathroom and kitchen, will also prevent indoor mold. Its very important to fix sources of water problems (leaks) and to clean and replace moldy materials after an episode of flooding. Also, if you are sensitive to molds, the use of an air purifier will decrease your exposure to mold spores which will eventually prevent allergy symptoms. I hope you learned key points about indoor mold and tips on how to prevent them. Stay updated with our blog for more interesting topics!
 
 <img src="/img/Lorraine.jpeg" alt="Lorraine N. Vélez-Torres" align="left" style="width: 15%; height: 15%; margin:8px">
